Fix: Hero height on small mobile devices

--- a/src/sections/hero/Hero.module.css
+++ b/src/sections/hero/Hero.module.css
@@ -2,6 +2,10 @@
 	display: flex;
 	min-height: 85svh;
 	overflow: hidden;
+
+	@media (width < 390px) {
+		min-height: 100svh;
+	}
 }
 
 /* Left section for the hero title and buttons */
@@ -32,7 +36,7 @@
 .heroMain {
 	padding-top: 6.5rem;
 	width: 100%;
-	height: 75%;
+	height: 80%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -60,6 +64,10 @@
 			font-size: clamp(2rem, 1.1855rem + 3.6199vw, 3.5rem);
 			width: 80%;
 		}
+
+		@media (width < 480px) {
+			margin-bottom: 1rem;
+		}
 	}
 
 	.buttonContainer {
@@ -68,6 +76,10 @@
 		align-items: center;
 		gap: 2rem;
 		margin-block: 1.5rem;
+
+		@media (width < 480px) {
+			margin-block: 1rem;
+		}
 
 		.linkButton {
 			display: inline-block;
